@@ -1,0 +1,20 @@
+<registry>
+  <record name="plone.displayed_types">
+    <value purge="False">
+      <element>ATBooleanCriterion</element>
+      <element>ATDateCriteria</element>
+      <element>ATDateRangeCriterion</element>
+      <element>ATListCriterion</element>
+      <element>ATPortalTypeCriterion</element>
+      <element>ATReferenceCriterion</element>
+      <element>ATSelectionCriterion</element>
+      <element>ATSimpleIntCriterion</element>
+      <element>ATSimpleStringCriterion</element>
+      <element>ATSortCriterion</element>
+      <element>ChangeSet</element>
+      <element>ATCurrentAuthorCriterion</element>
+      <element>ATPathCriterion</element>
+      <element>ATRelativePathCriterion</element>
+    </value>
+  </record>
+</registry>
