@@ -4,7 +4,9 @@ Changelog
 2.2.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add ATTopic-Criteria to types_not_searched.
+  Fixes https://github.com/plone/Products.CMFPlone/issues/872#issuecomment-139402534
+  [pbauer]
 
 
 2.2.6 (2015-07-18)
